tests/ui/parser/misspelled-keywords/const-fn.stderr
error: expected one of `!` or `::`, found keyword `fn`
  --> $DIR/const-fn.rs:1:6
   |
LL | cnst fn code() {}
   |      ^^ expected one of `!` or `::`
   |
help: there is a keyword `const` with a similar name
   |
LL | const fn code() {}
   |  +

error: aborting due to 1 previous error

